{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 5,
  "lineage": "f2af9309-3e45-621f-3641-506f072a35da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861974893776:security-group/sg-032580d230ac3d56a",
            "description": "Security Group 1",
            "egress": [],
            "id": "sg-032580d230ac3d56a",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.64.67.89/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg1-20230920222026999600000001",
            "name_prefix": "sg1-",
            "owner_id": "861974893776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018e6da37e2b2b4b1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861974893776:security-group/sg-0bc09861022b2182a",
            "description": "Security Group 2",
            "egress": [],
            "id": "sg-0bc09861022b2182a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg2-20230920222029695100000002",
            "name_prefix": "sg2-",
            "owner_id": "861974893776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018e6da37e2b2b4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861974893776:security-group/sg-0f22ae7924307d45d",
            "description": "Security Group 3",
            "egress": [],
            "id": "sg-0f22ae7924307d45d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a",
                  "sg-0bc09861022b2182a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a",
                  "sg-0bc09861022b2182a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a",
                  "sg-0bc09861022b2182a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg3-20230920222032091700000003",
            "name_prefix": "sg3-",
            "owner_id": "861974893776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018e6da37e2b2b4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_security_group.sg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861974893776:security-group/sg-00c7bbb435f846456",
            "description": "Security Group 4",
            "egress": [],
            "id": "sg-00c7bbb435f846456",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a",
                  "sg-0f22ae7924307d45d"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032580d230ac3d56a",
                  "sg-0f22ae7924307d45d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg4-20230920222034392400000004",
            "name_prefix": "sg4-",
            "owner_id": "861974893776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018e6da37e2b2b4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_security_group.sg2",
            "aws_security_group.sg3"
          ]
        }
      ]
    }
  ]
}